@@ -27,6 +27,7 @@
 #import "Isgl3dMaterial.h"
 #import "Isgl3dGLParticle.h"
 #import "Isgl3dGLRenderer.h"
+#import "Isgl3dObject3DGrabber.h"
 
 @implementation Isgl3dParticleNode
 
@@ -35,13 +36,13 @@
 }
 
 - (id) initWithParticle:(Isgl3dGLParticle *)particle andMaterial:(Isgl3dMaterial *)material {
-    if ((self = [super init])) {
+	 if ((self = [super init])) {
 
 		_particle = [particle retain];
 		_material = [material retain];
-    }
+	 }
 	
-    return self;
+	 return self;
 }
 
 - (void) dealloc {
@@ -105,6 +106,49 @@
 	}
 }
 
+- (void) renderForEventCapture:(Isgl3dGLRenderer *)renderer {
+
+	if (_material && self.interactive) {
+
+		// Set the renderer requirements (ES 2.0 uses the same shader for normal render)
+		unsigned int rendererRequirements = PARTICLES_ON;
+		[renderer setRendererRequirements:rendererRequirements];
+
+		// Cannot render point sprites because texture color will interfere with capture color
+		// Texture would only make a difference with alpha culling enabled: don't enable for capture, too costly
+
+		// Get capture color
+		float captureColor[4];
+		[[Isgl3dObject3DGrabber sharedInstance] getCaptureColor:captureColor forObject:self];
+
+		// Set the capture color in particle(s): !!! bad performance for particle systems !!!
+		[_particle prepareForEventCapture:captureColor[0] g:captureColor[1] b:captureColor[2]];
+
+		// Send the vertex data to the renderer
+		[renderer setVBOData:[_particle vboData]];
+
+		// Bind element index buffer
+		[renderer setElementBufferData:[_particle indicesBufferId]];
+
+		// Set alpha culling value
+		[renderer setAlphaCullingValue:_alphaCullValue];
+
+		[renderer setPointAttenuation:[_particle attenuation]];
+		// Set the model matrix
+		[renderer setModelMatrix:&_worldTransformation];
+
+		// Renderer the particle
+		[renderer preRender];
+		[renderer render:Points withNumberOfElements:[_particle numberOfPoints] atOffset:0];
+		[renderer postRender];
+
+		// Restore original particle color: !!! bad performance for particle systems !!!
+		[_particle restoreRenderColor];
+	}
+
+	// Recurse over children
+	[super renderForEventCapture:renderer];
+}
 
 - (void) collectAlphaObjects:(NSMutableArray *)alphaObjects {
 	if (_transparent) {
